# streamlit-chitchat

./: README.md  main.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/streamlit_chitchat/: chitchat.py
streamlit_chitchat/: __init__.py
streamlit_chitchat/streamlit_chitchat/: chitchat.py  data.py  utils.py
streamlit_chitchat/tests/: main.py
tests/: main.py
