[tool.poetry]
name = "streamlit-chitchat"
version = "0.1.4"
description = ""
authors = ["k4144 <you@example.com>"]
readme = "README.md"
packages = [{include = "streamlit_chitchat"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[metadata]
name = 'streamlit-chitchat'
version = '0.1.0'
author = 'k4144'
author_email = 'your_email@example.com'
description = 'simple streamlit helper'
long_description = ['file: README.md', 'LICENSE.txt']
long_description_content_type = 'text/markdown'
url = 'https://github.com/k4144/streamlit-chitchat'
